data/all_generated_tests/raw_wast_tests/unreachable_TypeMismatchinControlFlowInstructions_1588.wast
;; 9. **Test Description 9:** Design a test where `unreachable` is used within a `try` block (if supported), where the `try` block would normally result in an `i32` value being pushed onto the stack. This check ensures the implementation appropriately respects stack type conditions disrupted by traps.

(assert_invalid
  (module (func $type-func-value-i32-after-unreachable-in-try
    (result i32)
    (try (result i32) (do (unreachable)) (i32.const 42))
  ))
  "type mismatch"
)